<resources>
    <string name="app_name">微信读书</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read">阅读</string>
    <string name="book_shelf">书架</string>
    <string name="discovery">发现</string>
    <string name="me">我</string>
    <string name="friends_idea">朋友的想法</string>
    <string name="small_coterie">小圈子</string>
    <string name="vip_exclusive">付费会员专享</string>
    <string name="buy_the_book_for_free">免费领书</string>
    <string name="welfare_field">福利场</string>
    <string name="wechat_voice_book_recommend_to_you">微信读书·为你推荐</string>
    <string name="account">账户</string>
    <string name="unlimited_card">无限卡</string>
    <string name="shopping_cart">购物车</string>
    <string name="order">订单</string>
    <string name="reading_list">阅读排行榜</string>
    <string name="attention">关注</string>
    <string name="medal">勋章</string>
    <string name="note">笔记</string>
    <string name="read_record_subscribe">阅读记录和订阅</string>
    <string name="home_page">主页</string>
    <string name="edit_personal_data">编辑个人资料</string>
    <string name="book_list">书单</string>
    <string name="defaults">默认</string>
    <string name="update">更新</string>
    <string name="schedule">进度</string>
    <string name="buy">购买</string>
    <string name="classification">分类</string>
    <string name="select">选择</string>
    <string name="rank_list">榜单</string>
    <string name="vip">会员</string>
    <string name="free">免费</string>
    <string name="book_city">书城</string>
    <string name="new_book">新书</string>
    <string name="hear_book">听书</string>
    <string name="recommended">推荐</string>
    <string name="reading">在读</string>
    <string name="enabling_push_notification">开启推送通知</string>
    <string name="question_of_the_day">每日一答</string>
    <string name="unlimited_vip_day">无限会员日</string>
    <string name="invite_wechat_friend">邀请微信好友</string>
    <string name="read_team">阅读小队</string>
    <string name="no_automatic_screen_lock_while_reading">阅读时不自动锁屏</string>
    <string name="allow_landscape_while_reading">阅读时允许横屏</string>
    <string name="hide_other_peoples_thoughts_while_reading">阅读时隐藏他人的想法</string>
    <string name="indent_the_first_line_of_the_text">正文首行缩进</string>
    <string name="click_on_the_left_to_go_to_the_next_page">点击左侧翻到下一页</string>
</resources>